# ps2mc-browser

./: .editorconfig  .env  .gitignore  LICENSE  README.md  README_zh.md  build.py  launcher.py  ps2mc-browser.spec  pyinstaller.py  pyproject.toml  requirements.txt
.github/workflows/: build-mac.yml  build-windows.yml  python-app.yml
src/: browser.py  canvas.py  error.py  icon.py  models.py  ps2mc.py  utils.py  window.py  wxcanvas.py  wxwindow.py
src/ps2mc_browser/: browser.py  icon.py  models.py  ps2mc.py  utils.py  wxcanvas.py  wxwindow.py
src/ps2mc_browser/shaders/: bg.vert  circle.frag  icon.vert
src/shaders/: bg.frag  bg.vert  circle.vert  icon.frag  icon.vert  skybox.frag  skybox.vert
tests/: test_gui.py
